fixed horizontal scrolling for mobile view

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -379,7 +379,7 @@ ul.social_icons li a:hover {
   padding: 10px 0px 10px 0px;
 }
 .logo_footer {
-  padding: 50px 0px 10px 0px;
+  margin-top: 5rem;
 }
 
 ul.copyright_section {
